# SemCEB

./: .env.example  .gitignore  .gitmodules  LICENSE  README.md  config.toml  downloaded_dummy_file.txt  generalnotes.md  pyproject.toml  requirements.txt  run.py
.github/workflows/: python-format.yml  python-version-check-3-10.yml  python-version-check-3-11.yml  python-version-check-3-12.yml
benchmark_queries/: ground_truth_cache.json  ground_truth_cache_gpt-5.4-nano.json  ground_truth_cache_gpt-5.4-nano_sf10.json  ground_truth_cache_gpt-5.4-nano_sf100.json  ground_truth_cache_gpt-5.4-nano_sf1000.json  queries.jsonl  queries_without_embeddings.jsonl
data/: analyze_data.py  downloader.py  loader.py
data/amazon-reviews/: README.md  amazon-reviews.py  compute_embeddings.py  download_and_prepare_amazon_reviews_dataset.py
documentation/: Benchmark Components Overview.drawio
queries/: generator.py  ground_truth_cache.json  queries.jsonl  query_specification.py  template.py  template_parser.py  templates.toml
results/: plotter.py
results/plots/data_skew/: products_filtered__description_json_embeddings_google_siglip2_base_patch16_224__largest_class.csv  products_filtered__description_json_embeddings_qwen_qwen3_embedding_0_6b__largest_class.csv  products_filtered__details_json_embeddings_google_siglip2_base_patch16_224__largest_class.csv  products_filtered__details_json_embeddings_qwen_qwen3_embedding_0_6b__largest_class.csv  products_filtered__features_json_embeddings_google_siglip2_base_patch16_224__largest_class.csv  products_filtered__features_json_embeddings_qwen_qwen3_embedding_0_6b__largest_class.csv  products_filtered__product_title_embeddings_google_siglip2_base_patch16_224__largest_class.csv  products_filtered__product_title_embeddings_qwen_qwen3_embedding_0_6b__largest_class.csv  reviews_filtered__review_text_embeddings_google_siglip2_base_patch16_224__largest_class.csv  (+3 more)
results/raw/: result.jsonl  result_scale_factor_10.jsonl  result_scale_factor_1000_only_simple_base_table_predicate.jsonl  result_scale_factor_20.jsonl  result_simulated_for_plotting.jsonl
results/tables/: algorithm_summary.csv  algorithm_summary.html  algorithm_summary.txt  data_skew_summary.csv  per_query_benchmark_report.html  per_query_statistics.csv  query_categoriy_counts.csv  query_types_count.csv
runner/: benchmark.py
runner/algorithms/: base.py  extrapolated_sampling.py  interface.py  my_selectivity_estimation_algorithm.py
runner/llm_backends/: lotus_backend.py
runner/models/: lotus_backend.py
src/semceb/: run.py
tools/: README.md
tools/amazon-reviews/: README.md  compute_dataset_embeddings.py  compute_embeddings.py  compute_query_embeddings.py  copy_prepared_data_to_runtime.py  download_and_prepare_amazon_reviews_dataset.py  import_embeddings_into_cache.py
tools/queries/: README.md  compute_embeddings.py  compute_query_embeddings.py
utils/: progress.py
(+66 files in other folders)
