[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SemCEB"
version = "0.1.0"
description = "A benchmark pipeline for running cardinality estimation algorithms and plotting the results."
readme = "README.md"
authors = [
    { name = "Claudius Kühn", email = "claudius.kuehn@utn.de" },
    { name = "Andreas Zimmer", email = "andreas.zimmer@utn.de" },
]
license = { "file" = "LICENSE" }
requires-python = ">=3.10, <3.13"
dependencies = ["pandas", "matplotlib", "seaborn", "rich", "lotus-ai", "certifi"]

[project.scripts]
semceb = "run:main"

[tool.setuptools]
py-modules = ["run"]

[tool.setuptools.packages.find]
include = ["runner*", "utils*", "data*", "results*"]
exclude = ["queries*", "documentation*"]
