[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SemCEB"
version = "1.0.0"
description = "A benchmark pipeline for running cardinality estimation algorithms and plotting the results."
readme = "README.md"
authors = [
    { name = "Claudius Kühn", email = "claudius.kuehn@utn.de" },
    { name = "Andreas Zimmer", email = "andreas.zimmer@utn.de" },
]
license = { file = "LICENSE" }
requires-python = ">=3.10, <3.13"
dependencies = [
    "pandas",
    "matplotlib",
    "seaborn",
    "rich",
    "lotus-ai",
    "certifi",
    "pyarrow",
    "python-dotenv",
    "tomli; python_version < '3.11'",
    "duckdb",
]

[project.optional-dependencies]
tools = [
    "duckdb",
    "pillow",
    "transformers",
    "torch",
    "scikit-learn",
    "safetensors",
    "huggingface_hub",
    "sentencepiece",
    "hdbscan",
    "umap-learn",
    "black",
]

[project.scripts]
semceb = "semceb.run:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["semceb*"]

[tool.black]
target-version = ["py310", "py311", "py312"]
